[build-system]
requires = [
  "setuptools >= 63.0.0", # required by pyproject+setuptools_scm integration
  "setuptools_scm[toml] >= 7.0.5", # required for "no-local-version" scheme

]
build-backend = "setuptools.build_meta"

[project]
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.9"
dynamic = ["version"]
name = "pytest-plus"
description = "PyTest Plus Plugin :: extends pytest functionality"
readme = "README.md"
authors = [{ "name" = "Sorin Sbarnea", "email" = "sorin.sbarnea@gmail.com" }]
maintainers = [
  { "name" = "Sorin Sbarnea", "email" = "sorin.sbarnea@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
keywords = ["testing", "pytest", "plugin"]
dependencies = ["pytest>=7.4.2"]

[project.urls]
homepage = "https://github.com/pytest-dev/pytest-plus"
repository = "https://github.com/pytest-dev/pytest-plus"
changelog = "https://github.com/pytest-dev/pytest-plus/releases"

[project.optional-dependencies]
test = ["coverage>=7.0.0", "pytest-html"]

[project.entry-points.pytest11]
plus = "pytest_plus"

[tool.coverage.run]
omit = ["test/*", "/private/var/folders/*", "/tmp/*"]

[tool.coverage.report]
fail_under = 100
omit = ["test/*", "/private/var/folders/*", "/tmp/*"]
show_missing = true

[tool.pytest.ini_options]
addopts = "-p no:flaky"

filterwarnings = [
  "error",
  "ignore:ast.(Str|Num|NameConstant) is deprecated and will be removed in Python 3.14:DeprecationWarning:_pytest.assertion.rewrite",
  "ignore:Attribute s is deprecated and will be removed in Python 3.14:DeprecationWarning:_pytest.assertion.rewrite",
]

[tool.ruff]
ignore = [
  "D203", # incompatible with D211
  "D213", # incompatible with D212
  "E501", # we use black
]
select = ["ALL"]
target-version = "py39"
# Same as Black.
line-length = 88

[tool.ruff.per-file-ignores]
"test/**/*.py" = ["S"]
[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/pytest_plus/_version.py"
