[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = pytest-plus
url = https://github.com/pycontribs/pytest-plus
project_urls =
    Bug Tracker = https://github.com/pycontribs/pytest-plus/issues
    Release Management = https://github.com/pycontribs/pytest-plus/releases
    Source Code = https://github.com/pycontribs/pytest-plus
description = PyTest Plus Plugin :: extends pytest functionality
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    testing
    pytest
    plugin

[options]
use_scm_version = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

install_requires =
    pytest >= 3.50
    # https://github.com/pytest-dev/pytest/issues/5854
    more_itertools >= 5, < 6; python_version<"3.0"
    more_itertools >= 6; python_version>="3.0"

[options.extras_require]
test =
    pytest-html

[options.entry_points]
pytest11 =
    plus = pytest_plus

[options.packages.find]
where = .
